
2.13.2 (UNRELEASED)
-------------------
 * Fix crash if systemd cgroup is unreadable in /sys, such as in containers.
   (LP: #1270783)
 * apt/dpkg: Also consider Contents.gz from updates/security/proposed pockets,
   so that e. g. apport-retrace works for crash reports with files that are new
   in those. Thanks to Brian Murray for the initial patch. (LP: #1271258)

2.13.1 (2014-01-10)
-------------------
 * Fix report.test_get_timestamp test for running in other time zones.
 * Fix erroneous "gdb-multiarch not installed" warnings in ui tests.
 * Fix ui.test_run_crash_older_session test for running as root.
 * Fix ui.test_run_crash_older_session for different file system file orders.

2.13 (2014-01-10)
-----------------
Improvements:
 * whoopsie-upload-all: Add a -t/--timeout option. In CI environments it is
   undesirable to block on upload for 30 mins, but it's still a reasonable
   timeout on less well connected devices.
 * Do not report keys starting with '_' to the crash database. This can be used
   for keeping private keys in .crash files between crash and report time, or
   to store data between hooks etc., without cluttering reports.
 * UI: In "run all pending crashes" mode, skip reports that happened during
   logout in a desktop (specifically, logind) session; they are uninteresting
   and confusing to see at the next login. (LP: #1033932) They can still be
   reported manually with running the .crash file directly, but this
   sufficiently reduces the need to explicitly flag whether the report concerns
   a logout crash. (LP: #1067646)
 * Add support for PID namespaces (Linux containers): Crashes originating from
   a container on a system running a >= 3.12 kernel will be automatically
   redirected to apport inside the container, or ignored if apport is not
   installed in the container. Thanks to Stéphane Graber!

Bug fixes:
 * test_signal_crashes: Clean up unexpected reports after every test, to avoid
   breaking all subsequent tests.